// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contract > eth_accounts > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`contract > experimental_getAdmins > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`contract > experimental_grantAdmin > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`contract > experimental_grantAdmin > default 1`] = `
{
  "id": "0x0000000000000000000000000000000000069420",
  "publicKey": "0x0000000000000000000000000000000000069420",
  "type": "address",
}
`;

exports[`contract > experimental_grantPermissions > behavior: no permissions 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.permissions.calls
Value: []]
`;

exports[`contract > experimental_grantPermissions > behavior: provided key 1`] = `
{
  "address": null,
  "chainId": undefined,
  "expiry": 9999999999,
  "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
  "key": {
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "type": "p256",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
  },
}
`;

exports[`contract > experimental_grantPermissions > behavior: provided key 2`] = `
{
  "address": null,
  "chainId": undefined,
  "expiry": 9999999999,
  "id": "0x0000000000000000000000000000000000000000",
  "key": {
    "publicKey": "0x0000000000000000000000000000000000000000",
    "type": "address",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
    "spend": [
      {
        "limit": "0x14d1120d7b160000",
        "period": "day",
      },
    ],
  },
}
`;

exports[`contract > experimental_grantPermissions > behavior: provided key 3`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
      "spend": [
        {
          "limit": 1500000000000000000n,
          "period": "day",
        },
      ],
    },
    "publicKey": null,
    "role": "session",
    "type": "address",
  },
]
`;

exports[`contract > experimental_grantPermissions > behavior: unlimited expiry 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.expiry]
`;

exports[`contract > experimental_grantPermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > experimental_revokeAdmin > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "publicKey": null,
    "role": "admin",
    "type": "address",
  },
]
`;

exports[`contract > experimental_revokeAdmin > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > experimental_revokePermissions > behavior: revoke last admin key 1`] = `[RpcResponse.InternalError: cannot revoke permissions.]`;

exports[`contract > experimental_revokePermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > experimental_revokePermissions > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability (provided key) 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": 9999999999,
    "hash": "0x594638e5e062340ffb82ba40803ebb7b0958358e0e94b585f5b2d9c8250a4a12",
    "id": undefined,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`createAccount\` capability > 
        [
          {
            "expiry": null,
            "hash": null,
            "permissions": undefined,
            "privateKey": [Function],
            "publicKey": null,
            "role": "admin",
            "type": "p256",
          },
        ]
       1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`grantPermissions\` capability (no permissions) 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.permissions.calls
Value: []]
`;

exports[`contract > wallet_connect > behavior: \`grantPermissions\` capability (unlimited expiry) 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.expiry]
`;

exports[`contract > wallet_connect > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": null,
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_disconnect > default 1`] = `
[
  [Provider.DisconnectedError: The provider is disconnected from all chains.],
]
`;

exports[`contract > wallet_sendCalls > behavior: no calls.to 1`] = `
[RpcResponse.InvalidParamsError: Expected required property

Path: params.0.calls.0.to]
`;

exports[`contract > wallet_sendCalls > behavior: not provider-managed permission 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`contract > wallet_sendCalls > behavior: permission does not exist 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`rpcServer > eth_accounts > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`rpcServer > experimental_getAdmins > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`rpcServer > experimental_grantAdmin > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`rpcServer > experimental_grantAdmin > default 1`] = `
{
  "id": "0x0000000000000000000000000000000000069420",
  "publicKey": "0x0000000000000000000000000000000000069420",
  "type": "address",
}
`;

exports[`rpcServer > experimental_grantPermissions > behavior: no permissions 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.permissions.calls
Value: []]
`;

exports[`rpcServer > experimental_grantPermissions > behavior: provided key 1`] = `
{
  "address": null,
  "chainId": undefined,
  "expiry": 9999999999,
  "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
  "key": {
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "type": "p256",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
  },
}
`;

exports[`rpcServer > experimental_grantPermissions > behavior: provided key 2`] = `
{
  "address": null,
  "chainId": undefined,
  "expiry": 9999999999,
  "id": "0x0000000000000000000000000000000000000000",
  "key": {
    "publicKey": "0x0000000000000000000000000000000000000000",
    "type": "address",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
    "spend": [
      {
        "limit": "0x14d1120d7b160000",
        "period": "day",
      },
    ],
  },
}
`;

exports[`rpcServer > experimental_grantPermissions > behavior: provided key 3`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
      "spend": [
        {
          "limit": 1500000000000000000n,
          "period": "day",
        },
      ],
    },
    "publicKey": null,
    "role": "session",
    "type": "address",
  },
]
`;

exports[`rpcServer > experimental_grantPermissions > behavior: unlimited expiry 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.expiry]
`;

exports[`rpcServer > experimental_grantPermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > experimental_revokeAdmin > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "publicKey": null,
    "role": "admin",
    "type": "address",
  },
]
`;

exports[`rpcServer > experimental_revokeAdmin > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > experimental_revokePermissions > behavior: revoke last admin key 1`] = `[RpcResponse.InternalError: cannot revoke admins.]`;

exports[`rpcServer > experimental_revokePermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > experimental_revokePermissions > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability (provided key) 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": 9999999999,
    "hash": "0x594638e5e062340ffb82ba40803ebb7b0958358e0e94b585f5b2d9c8250a4a12",
    "id": undefined,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` capability > 
        [
          {
            "expiry": null,
            "hash": null,
            "permissions": undefined,
            "privateKey": [Function],
            "publicKey": null,
            "role": "admin",
            "type": "p256",
          },
        ]
       1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`grantPermissions\` capability (no permissions) 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.permissions.calls
Value: []]
`;

exports[`rpcServer > wallet_connect > behavior: \`grantPermissions\` capability (unlimited expiry) 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.expiry]
`;

exports[`rpcServer > wallet_connect > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {},
    "privateKey": null,
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_disconnect > default 1`] = `
[
  [Provider.DisconnectedError: The provider is disconnected from all chains.],
]
`;

exports[`rpcServer > wallet_sendCalls > behavior: no calls.to 1`] = `
[RpcResponse.InvalidParamsError: Expected required property

Path: params.0.calls.0.to]
`;

exports[`rpcServer > wallet_sendCalls > behavior: not provider-managed permission 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`rpcServer > wallet_sendCalls > behavior: permission does not exist 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;
